# court-case-question-answering-app-shared

./: .gitignore  README.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  run_preprocessing_tests.ps1  run_real_preprocessing_tests.ps1
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  chat.py  citations.py  preprocessing.py  tools.py
backend/app/core/: auth.py  config.py
backend/app/db/: base.py  session.py
backend/app/middleware/: logging_middleware.py
backend/app/models/: __init__.py  case.py  chat.py  document.py  http_logs.py  llm_logs.py
backend/app/schemas/: chat.py  preprocessing.py  tools.py
backend/app/services/: chat.py  chat_agent.py  chunking.py  clearinghouse_client.py  db_logger.py  document_qa.py  embeddings.py  executor.py  llm.py  planner_agent.py  planner_types.py  preprocessing.py  preprocessing_types.py  search.py  summarization.py
backend/app/utils/: llm_logger.py
backend/migrations/: env.py
backend/migrations/versions/: 2025_12_26_1757-7b1827ed4d3e_create_initial_schema.py  2025_12_28_0839-a9cc213a5102_refactor_chat_to_messages.py  2026_01_01_1804-ba082b84c596_update_reasoning_step_type_constraint.py  2026_01_07_2302-8f63405f9a13_create_http_request_logs_table_and_drop_.py  (+1 more)
backend/tests/: test_chunking.py  test_clearinghouse.py  test_context_builder.py  test_db_connection.py  test_embeddings.py  test_executor.py  test_final_answer_mode.py  test_keyword_search.py  test_llm_call.py  test_map_reduce.py  test_reasoning_loop.py  test_semantic_search.py
(+69 files in other folders)
